--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
     <uses-permission
         android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        />
+    android:name="android.permission.READ_EXTERNAL_STORAGE"
+    />
+
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
