--- a/openCVLibrary2410/src/main/AndroidManifest.xml
+++ b/openCVLibrary2410/src/main/AndroidManifest.xml
@@ -5,4 +5,6 @@
       android:versionName="2.4.10">
 
     <uses-sdk android:minSdkVersion="8" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
 </manifest>
